--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,10 @@
       <div class="form-input">
         
         <div class="form-group">
+          <%= f.label :name %><br />
+          <%= f.text_field :name, class:"form-control", autocomplete: "off" %>
+        </div>
+        <div class="form-group">
           <%= f.label :email %><br />
           <%= f.email_field :email, class:"form-control", autofocus:  true %>
         </div>
