--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,10 +4,13 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
+          <%= f.label :name %><br />
+          <%= f.name_field :name, class:"form-control", autocomplete: "off" %>
+        </div>
+  <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, class: "form-control", autofocus: true %>
   </div>
-
   <div class="form-gorup">
     <%= f.label :password %>
     <% if @minimum_password_length %>
