--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1><a href="<%= "http://#{@link.url}" %>"><%= @link.title %></a><br> 
-                <small>Submitted by <%= @link.user.email %></small></h1>
+                <small>Submitted by <%= @link.user.name %></small></h1>
 </div>
 
 <div class="btn-group">
